# avion-bot

./: .env.example  Cargo.toml  Dockerfile  README.md  SELFHOSTING_AND_DEVELOPMENT.md  SETUP.md  build.rs  fly.toml
.github/workflows/: publish-to-ghcr.yml  rust.yml
.gothub/workflows/: rust.yml
.idx/: dev.nix
.sqlx/: query-04a8bffed61fcb1795203bc65dec24501a860779ede7e81594cfb14b670bf5e6.json  query-0a0236fe1de38f56c6c798a03f9bddb1ef05e37a1ad361fe18cb955b496d3729.json  query-138bc252fb812aa5a6027c2c22dc25a61537621b53559f3c9cfaa9269abbebc2.json  query-184e8105e27dbc0f4dff3067e11b038f6425fcc7dbe20faafc92fef6969715da.json  query-52f1deaa878a9ff0b9d510ce3d39b312e2aaea5c3e35335e03f176f243837b2b.json  query-7d405e2f76fc326e55361296ce6c3ca32db8f929899a526e49d8d18f34112d9b.json  query-8855eac3d53d3b5c8bee2153ad9827454c5068150c00e828bfb9d63b7d5cff41.json  query-98d90646f7b75bce6003aaf9703c3d832f0584403d385cd24ea34110beb78652.json  query-ced8eabfd6615b1a719f41975034a4409040f2201a2f75972129ec4856fae53d.json
migrations/: 20240309205440_init.up.sql  20240310141425_balances_non_null.down.sql  20240310141425_balances_non_null.up.sql  20240312130808_make_balances_guild_specific.down.sql  20240312130808_make_balances_guild_specific.up.sql  20240523171221_add_index_to_users_table.down.sql  20240523171221_add_index_to_users_table.up.sql  20240523171835_add_jobs_table.down.sql  20240523171835_add_jobs_table.up.sql
src/: embeds.rs  main.rs  timestamp.rs
src/commands/: about.rs  avatar.rs  balance.rs  give.rs  mod.rs  register.rs  user_info.rs
src/commands/xkcd/: api.rs  mod.rs
src/util/: avatar_url.rs  db.rs  image_urls.rs  mod.rs  timestamp.rs
test/workflows/: rust.yml
