[package]
name = "avion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
const_format = "0.2"
dotenvy = "0.15"
envy = "0.4.2"
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }
sentry = { version = "0.32", default-features = false, features = [
    "tokio",
    "panic",
    "backtrace",
    "contexts",
    "transport",
] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
eyre = "0.6"
vergen = { version = "8", features = [
    "build",
    "git",
    "gitcl",
    "cargo",
    "rustc",
] }

[profile.release]
# Required for Sentry line numbers
debug = 1

# Decreases build times
[profile.dev.package.sqlx-macros]
opt-level = 3
